bpo-40769: allow extra surrounding parentheses for invalid annotated assignment rule